--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -19,6 +19,6 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 
-en:
-  hello: "Hello world"
-  edit_user_button: "Edit user"
+nb:
+  hello: "Hei Verden"
+  edit_user_button: "Endre bruker"
