Adds way to change user role if logged in as administrator.

--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -42,9 +42,11 @@ nb:
         title: Tittel
 
       user:
+        allergies: Allergier
         email: E-postaddresse
         gender: Kjønn
         name: Navn
+        role: Rolle
 
     models:
       accommodation:
@@ -95,3 +97,8 @@ nb:
   users:
     index:
       actions: Handlinger
+    edit:
+      administrator: Administrator
+      organizer: Organisator
+      participant: Deltager
+      speaker: Foredragsholder
