Remove action buttons for editing and deleting participations.

--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -96,6 +96,10 @@ nb:
     index:
       actions: Handlinger
 
+  participations:
+    index:
+      actions: Handlinger
+
   layouts:
     menu:
       frontpage: Forside
