--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -150,7 +150,13 @@ nb:
     frontpage: Forside
     sign_out: Logg ut
     edit_profile: Rediger profil
-
+  
+  session_event:
+    session_type:
+      lightningtalk: Lightningtalk
+      presentation: Presentasjon
+      workshop: Workshop
+  
   misc:
     gender:
       male: Mann
