More nono-migrate. Lang in user profile.

--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -45,6 +45,7 @@ nb:
         allergies: Allergier
         email: E-post
         gender: Kjønn
+        locale: Foretrukket språk
         name: Navn
         role: Rolle
         first_name: Fornavn
@@ -157,6 +158,10 @@ nb:
       male: Mann
       female: Kvinne
       unspecified: Uspesifisert
+    languages:
+      nb: Norsk
+      en: Engelsk
+      sv: Svensk
     empty: Ingen %{name}
 
 en:
