--- a/config/locales/views.yml
+++ b/config/locales/views.yml
@@ -4,7 +4,7 @@ nb:
     participants: påmeldte
     talks: talks
   event_sessions:
-    new: Call for paper
+    new: Call for papers
   participations:
     new: Påmelding
     edit: Påmelding
