Fix event session table.

--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -38,8 +38,10 @@ nb:
 
       event_session:
         description: Beskrivelse
+        submitter: Foredragsholder
         duration: Varighet (i minutter)
         title: Tittel
+        state: Status
 
       user:
         allergies: Allergier
