Google static map

--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -96,6 +96,10 @@ nb:
         one: Påmelding
         other: Påmeldinger
 
+      hotel:
+        one: Hotell
+        other: Hoteller
+
   events:
     index:
       actions: Handlinger
