--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -71,6 +71,13 @@ nb:
         title: Tittel
         description: Beskrivelse
 
+      event_session:
+        title: Tittel
+        description: Beskrivelse
+        short_description: Kort beskrivelse
+        duration: Ønsket lengde (minutter)
+        language: Språk
+
     models:
       accommodation:
         one: Rom
@@ -118,6 +125,21 @@ nb:
       event_name: Arrangement
       header: Liste over alle innslag
       user_name: Holdes av
+
+  enum:
+    language:
+      en: Engelsk
+      no: Norsk
+      sv: Svensk
+    event_session:
+      session_type:
+        lightning_talk: Lyntale
+        presentation: Presentasjon
+        workshop: Workshop
+      state:
+        proposed: Foreslått
+        rejected: Avvist
+        accepted: Godkjent
 
   shared:
     action_links:
