--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -129,7 +129,7 @@ nb:
   enum:
     language:
       en: Engelsk
-      no: Norsk
+      'no': Norsk
       sv: Svensk
     event_session:
       session_type:
