Some changes to Activity views and controller.

--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -218,3 +218,6 @@ nb:
       long: "%A, %e. %B %Y, %H:%M"
       short: "%e. %B, %H:%M"
     pm: ''
+  views:
+    tables:
+      actions: Handlinger
