--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -219,5 +219,8 @@ nb:
       short: "%e. %B, %H:%M"
     pm: ''
   views:
+    activities:
+      index:
+        download_xlsx: Last ned regneark med påmeldinger
     tables:
       actions: Handlinger
