--- a/config/locales/models.yml
+++ b/config/locales/models.yml
@@ -179,7 +179,7 @@ nb:
     frontpage: Forside
     sign_out: Logg ut
     edit_profile: Rediger profil
-    currently_impersonating: 'Brukerperspektiv:'
+    currently_impersonating: "Stop impersonating %{first_name} %{last_name}"
 
   session_event:
     session_type:
