Sudden realization that the locking solution is overengineered. Standarize to lock id for event for now.

--- a/config/locales/nb.yml
+++ b/config/locales/nb.yml
@@ -216,6 +216,10 @@ nb:
   participations:
     table:
       actions: Handlinger
+  shared:
+    lock_buttons:
+      lock: "Lås %{lockable}"
+      unlock: "Lås opp %{lockable}"
   support:
     array:
       last_word_connector: " og "
