Adds a passport info complete column in users#index, translation fixes

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -65,6 +65,8 @@ en:
 
     lock_buttons:
       lock: Lock
+    table:
+      actions: Actions
 
   user:
     table:
@@ -80,6 +82,8 @@ en:
       organizer: Organizer
       participant: Participant
       speaker: Speaker
+    table:
+      passport_information_complete: Passport information complete?
 
   after_signup:
     steps:
