config/locals/models: Track.capacity: Audience capacity.

--- a/config/locales/models.en.yml
+++ b/config/locales/models.en.yml
@@ -59,6 +59,9 @@ en:
         duration: Requested duration (minutes)
         language: Language used
 
+      track:
+        capacity: Audience capacity
+
     models:
       accommodation:
         one: Room
