--- a/config/locales/models.nb.yml
+++ b/config/locales/models.nb.yml
@@ -80,6 +80,9 @@ nb:
         duration: Ønsket lengde (minutter)
         language: Språk
 
+      track:
+        capacity: Publikumskapasitet
+
     models:
       accommodation:
         one: Rom
