Adds locale attribute to User object, and sets app locale based on current locale.

--- a/config/locales/models.en.yml
+++ b/config/locales/models.en.yml
@@ -26,6 +26,7 @@ en:
         allergies: Allergies
         email: E-mail
         gender: Gender
+        locale: Locale
         name: Name
         role: Role
         first_name: First name
