--- a/config/locales/models.nb.yml
+++ b/config/locales/models.nb.yml
@@ -47,6 +47,7 @@ nb:
         allergies: Allergier
         email: E-post
         gender: Kjønn
+        locale: Språk
         name: Navn
         role: Rolle
         first_name: Fornavn
