Adds venue form, fixes menus, updates layouts, seeds, program

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -36,7 +36,7 @@ en:
       update: Update %{model}
     actions:
       index: '%{model}'
-      show: '%{model}: %{record}'
+      show: '%{record}'
       edit: Edit %{model}
       new: New %{model}
       delete: Delete %{model}
