--- a/config/locales/models.en.yml
+++ b/config/locales/models.en.yml
@@ -91,6 +91,10 @@ en:
       hotel:
         one: Hotel
         other: Hotels
+
+      venue:
+        one: Venue
+        other: Venues
       
       passport: Passport information
 
