Tracks fixes, layout fixes, program fixes

--- a/config/locales/models.en.yml
+++ b/config/locales/models.en.yml
@@ -95,6 +95,10 @@ en:
       venue:
         one: Venue
         other: Venues
+
+      track:
+        one: Track
+        other: Tracks
       
       passport: Passport information
 
