--- a/config/locales/views.nb.yml
+++ b/config/locales/views.nb.yml
@@ -1,13 +1,37 @@
 nb:
   events:
     show: Se arrangement
-    participants: påmeldte
-    talks: talks
+    participants: Deltakere
+    talks: Foredrag
+    index:
+      actions: Handlinger
+      registration: Registrering
+    table:
+      actions: Handlinger
+      add_participation: Meld deg på
+      edit_participation: Rediger påmelding
+
   event_sessions:
     new: Call for papers
+
   participations:
-    new: Påmelding
-    edit: Påmelding
+    new: Meld deg på
+    edit: Rediger påmelding
+    table:
+      actions: Handlinger
+    index:
+      list_single_room_participants: Liste over deltakere med enkeltrom
+      list_allergic_participants: Liste over deltakere med allergier
+
+  activities:
+    table:
+      actions: Handlinger
+
+  proposals:
+    index:
+      event_name: Arrangement
+      header: Alle forslag
+      user_name: Organisert av
 
   helpers:
     select:
@@ -44,6 +68,16 @@ nb:
         add: Legg til bilde
     new_link:
       new_button: Legg til %{class_name}
+    buttons:
+      download_xlsx: Last ned som regneark
+      lock: "Lås %{lockable}"
+      unlock: "Lås opp %{lockable}"
+      upload_fields:
+        add: Legg til bilde
+    table:
+      actions: Handlinger
+    users:
+      passport_information_complete: Fullstendig passinfo registrert?
 
   user:
     table:
@@ -73,7 +107,7 @@ nb:
 
   session_event:
     session_type:
-      lightningtalk: Lightningtalk
+      lightningtalk: Lyntale
       presentation: Presentasjon
       workshop: Workshop
 
@@ -81,25 +115,15 @@ nb:
     gender:
       male: Mann
       female: Kvinne
-      unspecified: Uspesifisert
+      unspecified: Annet/Uspesifisert
     empty: Ingen %{name}
     locale:
       en: English
       nb: Norsk (bokmål)
 
-  participations:
-    table:
-      actions: Participations
-
-  shared:
-    buttons:
-      download_xlsx: Last ned regneark
-      lock: "Lås %{lockable}"
-      unlock: "Åpne %{lockable}"
-    users:
-      passport_information_complete: Fullstendig passinfo registrert?
   pages:
     front:
-      all_events: All events
-      next_event: Next event
-      sign_in: Sign in
+      all_events: Alle arrangementer
+      next_events: Kommende arrangementer
+      next_event: Neste event
+      sign_in: Logg inn
