Fixes locking of buttons in event, rendering of buttons

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -10,6 +10,7 @@ en:
       actions: Actions
       add_participation: Add participation
       edit_participation: Edit participation
+      event_participation_locked: Participation locked
 
   event_sessions:
     new: Call for papers
