--- a/config/locales/views.nb.yml
+++ b/config/locales/views.nb.yml
@@ -10,6 +10,7 @@ nb:
       actions: Handlinger
       add_participation: Meld deg på
       edit_participation: Rediger påmelding
+      event_participation_locked: Påmelding låst
 
   event_sessions:
     new: Call for papers
