Adds actual language string for event session show language

--- a/config/locales/views.en.yml
+++ b/config/locales/views.en.yml
@@ -13,6 +13,11 @@ en:
 
   event_sessions:
     new: Call for papers
+    show:
+      languages:
+        en: English
+        no: Norwegian
+        sv: Swedish
 
   participations:
     new: My particpation
