--- a/config/locales/models.en.yml
+++ b/config/locales/models.en.yml
@@ -1,5 +1,4 @@
 en:
-
   accommodations:
     index:
       actions: Action
@@ -17,12 +16,17 @@ en:
         is_published: Published
 
       event_session:
+        co_presenter_ids: Co presenters
         description: Description
-        submitter: Submitted
-        duration: Duration (minutes)
-        title: Title
+        duration: Requested duration (minutes)
+        language: Language used
+        level: Difficulty level
+        session_type: Type
+        short_description: Short description
         state: Status
-
+        submitter: Submitted
+        tag_list: Tags
+        title: Title
       user:
         allergies: Allergies
         email: E-mail
@@ -53,14 +57,6 @@ en:
       activity:
         title: Title
         description: Description
-
-      event_session:
-        title: Title
-        description: Description
-        short_description: Short description
-        duration: Requested duration (minutes)
-        language: Language used
-
     models:
       accommodation:
         one: Room
@@ -108,6 +104,10 @@ en:
       sv: Swedish
 
     event_session:
+      level:
+        beginner: Beginner
+        expert: Expert
+        intermediate: Intermediate
       session_type:
         lightning_talk: Lightning talk
         presentation: Presentation
