--- a/config/locales/models.en.yml
+++ b/config/locales/models.en.yml
@@ -16,7 +16,8 @@ en:
         is_published: Published
 
       event_session:
-        co_presenter_ids: Co presenters
+        co_presenters: Co-presenters
+        comments_to_organizers: Comments to organizers
         description: Description
         duration: Requested duration (minutes)
         language: Language used
