--- a/config/locales/models.nb.yml
+++ b/config/locales/models.nb.yml
@@ -37,7 +37,8 @@ nb:
         is_published: Publisert
 
       event_session:
-        co_presenter_ids: Medvirkende
+        co_presenters: Medvirkende
+        comments_to_organizers: Kommentarer til arrangøren
         description: Beskrivelse
         duration: Ønsket lengde (minutter)
         language: Språk
