--- a/config/locales/views.nb.yml
+++ b/config/locales/views.nb.yml
@@ -12,6 +12,11 @@ nb:
       edit_participation: Rediger påmelding
       event_participation_locked: Påmelding låst
 
+  sessions:
+    new:
+      username: E-post
+      password: Passord
+
   event_sessions:
     new: Call for papers
     show:
