Adds company field to profile. The field is only editable by administrators, as it is supposed to be populated by AD.

--- a/config/locales/models.en.yml
+++ b/config/locales/models.en.yml
@@ -30,6 +30,7 @@ en:
         title: Title
       user:
         allergies: Allergies
+        company: Company
         email: E-mail
         gender: Gender
         locale: Locale
