--- a/config/locales/models.nb.yml
+++ b/config/locales/models.nb.yml
@@ -51,6 +51,7 @@ nb:
         title: Tittel
       user:
         allergies: Allergier
+        company: Firma
         email: E-post
         gender: Kjønn
         locale: Språk
